--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -58,6 +58,9 @@ jobs:
         run: | 
           ln -s /bin/sh /usr/bin/sh
           ln -s /usr/bin/cmake /usr/local/bin/cmake
+          ./scripts/commissioning.sh
+          chown $USER:$USER -R /var/tfc  # todo fix this differently
+          chown $USER:$USER -R /run/tfc
         shell: alpine.sh --root {0}
 
       - name: Restore artifacts, or setup vcpkg (do not install any package)
