--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -37,21 +37,21 @@ jobs:
           apk upgrade autoconf-archive --repository=https://dl-cdn.alpinelinux.org/alpine/edge/main/
         shell: alpine.sh --root {0}
 
-      - name: Cache Ninja
-        if: matrix.architecture == 'x86_64'
-        id: cache-ninja-x86_64
-        uses: actions/cache@v3
-        with:
-          path: build-ninja
-          key: ninja-1.11.1
-
-      - name: Cache Ninja
-        if: matrix.architecture == 'aarch64'
-        id: cache-ninja-aarch64
-        uses: actions/cache@v3
-        with:
-          path: build-ninja
-          key: ninja-1.11.1
+#      - name: Cache Ninja
+#        if: matrix.architecture == 'x86_64'
+#        id: cache-ninja-x86_64
+#        uses: actions/cache@v3
+#        with:
+#          path: build-ninja
+#          key: ninja-1.11.1
+#
+#      - name: Cache Ninja
+#        if: matrix.architecture == 'aarch64'
+#        id: cache-ninja-aarch64
+#        uses: actions/cache@v3
+#        with:
+#          path: build-ninja
+#          key: ninja-1.11.1
 
       - name: Build ninja
         run: |
@@ -60,7 +60,7 @@ jobs:
           cmake -B build-ninja -S ninja-$VERSION
           cmake --build build-ninja
         shell: alpine.sh {0}
-        if: steps.cache-ninja-${{ matrix.architecture }}.outputs.cache-hit != 'true'
+#        if: steps.cache-ninja-${{ matrix.architecture }}.outputs.cache-hit != 'true'
 
       - name: Install ninja
         run: |
