--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -128,16 +128,16 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: tfc-framework-${{matrix.build_type}}-static
-          path: build/pack-gcc-${{matrix.build_type}}-static/*.deb
+          path: build/**/*.deb
       - name: Upload rpm package
         if: matrix.ubuntu_version == 22
         uses: actions/upload-artifact@v3
         with:
           name: tfc-framework-${{matrix.build_type}}-static
-          path: build/pack-gcc-${{matrix.build_type}}-static/*.rpm
+          path: build/**/*.rpm
       - name: Upload tar package
         if: matrix.ubuntu_version == 22
         uses: actions/upload-artifact@v3
         with:
           name: tfc-framework-${{matrix.build_type}}-static
-          path: build/pack-gcc-${{matrix.build_type}}-static/*.tar.gz
+          path: build/**/*.tar.gz
