Compile difficulties with clang resolved

--- a/libs/confman/tests/CMakeLists.txt
+++ b/libs/confman/tests/CMakeLists.txt
@@ -1,4 +1,7 @@
 find_package(ut CONFIG REQUIRED)
+find_package(Boost REQUIRED COMPONENTS program_options)
+find_package(fmt CONFIG REQUIRED)
+find_package(glaze CONFIG REQUIRED)
 add_executable(observer_test observer_test.cpp)
 
 target_link_libraries(observer_test PRIVATE tfc::confman Boost::ut glaze::glaze)
@@ -46,6 +49,8 @@ target_link_libraries(dbus_test
     tfc::confman
     tfc::ipc_connector
     Boost::ut
+    Boost::program_options
+    fmt::fmt
     glaze::glaze
     SDBusCpp::sdbus-c++
 )
