--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -13,7 +13,8 @@ add_library(tfc::confman ALIAS libconfman)
 
 target_include_directories(libconfman
   PUBLIC
-    inc/public
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<INSTALL_INTERFACE:inc/public>
     ${AZMQ_INCLUDE_DIRS}
   PRIVATE
     inc
