--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -12,7 +12,8 @@ add_library(tfc::ec ALIAS ec)
 
 target_include_directories(ec
   PUBLIC
-    inc/public
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<INSTALL_INTERFACE:inc/public>
     ${BEXT_SML_INCLUDE_DIRS}
   PRIVATE
     inc/
