--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -11,7 +11,8 @@ find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
 
 target_include_directories(ipc
   PUBLIC
-    inc/public
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<INSTALL_INTERFACE:inc/public>
     ${AZMQ_INCLUDE_DIRS}
   PRIVATE
     inc
