--- a/libs/stx/CMakeLists.txt
+++ b/libs/stx/CMakeLists.txt
@@ -6,5 +6,6 @@ add_library(tfc::stx ALIAS stx)
 
 target_include_directories(stx
   INTERFACE
-    inc/public
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<INSTALL_INTERFACE:inc/public>
 )
