remove explicit STATIC for libraries

--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(mp-units CONFIG REQUIRED)
 find_package(soem CONFIG REQUIRED)
 
 
-add_library(ec STATIC src/ec.cpp src/base.cpp)
+add_library(ec src/ec.cpp src/base.cpp)
 add_library(tfc::ec ALIAS ec)
 
 target_include_directories(ec
