--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -32,7 +32,7 @@ jobs:
           arch: ${{ matrix.architecture }}
           branch: v3.17
           packages: >
-            g++ curl zip unzip tar build-base musl python3 cmake make linux-headers openssl-dev git rpm-dev autoconf-archive bash automake autoconf libtool
+            g++ curl zip unzip tar build-base musl python3 cmake make linux-headers openssl-dev git rpm-dev autoconf-archive bash automake autoconf libtool meson gperf
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
       - name: Get new cmake
         run: |
