--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -23,7 +23,10 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libsystemd-dev cppcheck lsb-release wget software-properties-common gnupg g++-12 g++-12-aarch64-linux-gnu curl ninja-build autoconf-archive meson gperf libcap-dev doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
+          sudo apt-get install git curl zip unzip tar wget lsb-release gnupg \
+            cppcheck software-properties-common g++-12 g++-12-aarch64-linux-gnu \ 
+            ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm \
+            doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
           sudo ln -s /usr/bin/aarch64-linux-gnu-gcc-12 /usr/bin/aarch64-linux-gnu-gcc
           sudo ln -s /usr/bin/aarch64-linux-gnu-g++-12 /usr/bin/aarch64-linux-gnu-g++
 
