--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y git curl zip unzip tar wget lsb-release gnupg
           sudo apt-get install -y cppcheck software-properties-common g++-12 g++-12-aarch64-linux-gnu 
-          sudo apt-get install -y ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm
+          sudo apt-get install -y ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm autopoint
           sudo apt-get install -y doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
           sudo ln -s /usr/bin/aarch64-linux-gnu-gcc-12 /usr/bin/aarch64-linux-gnu-gcc
           sudo ln -s /usr/bin/aarch64-linux-gnu-g++-12 /usr/bin/aarch64-linux-gnu-g++
