wip create libsystemd cmake config
libcap cross compile is broken the artifact has x86_64 signature

--- a/libs/confman/tests/CMakeLists.txt
+++ b/libs/confman/tests/CMakeLists.txt
@@ -43,9 +43,11 @@ add_test(
 
 add_executable(dbus_test sdbus_test.cpp)
 
+find_package(unofficial-systemd CONFIG REQUIRED)
 find_package(sdbus-c++ CONFIG REQUIRED)
 target_link_libraries(dbus_test
   PRIVATE
+    unofficial::systemd::libsystemd
     tfc::confman
     tfc::ipc_connector
     Boost::ut
