--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(confman)
 add_subdirectory(gpio)
 add_subdirectory(tfcctl)
 add_subdirectory(ws-bridge)
+add_subdirectory(ipc-ruler)
