upload vcpkg and cleanup

--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -59,6 +59,19 @@ jobs:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           workflowPreset: 'packflow-aarch64-gcc-${{matrix.build_type}}'
 
+      - name: Upload vcpkg log
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: vcpkg-build-fail-logs
+          path: ${{ github.workspace }}/vcpkg/**/*out.log
+      - name: Upload vcpkg log
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: vcpkg-build-fail-logs
+          path: ${{ github.workspace }}/vcpkg/**/*err.log
+
       - name: Test install
         if: matrix.architecture == 'x86_64'
         run: |
