--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -6,14 +6,14 @@ find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
 find_package(fmt CONFIG REQUIRED)
 
 add_library(libconfman
-  STATIC
-    src/confman.cpp
+  src/confman.cpp
 )
 add_library(tfc::confman ALIAS libconfman)
 
 target_include_directories(libconfman
   PUBLIC
-    inc/public
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<INSTALL_INTERFACE:inc/public>
     ${AZMQ_INCLUDE_DIRS}
   PRIVATE
     inc
