--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_subdirectory(confman)
 add_subdirectory(gpio)
+add_subdirectory(operation-mode)
 add_subdirectory(tfcctl)
 add_subdirectory(ws-bridge)
 add_subdirectory(ipc-ruler)
