--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(ipc)
 add_subdirectory(ipc_connector)
 add_subdirectory(rpc)
 add_subdirectory(ec)
+add_subdirectory(operation_mode)
 
 add_library(tfc INTERFACE)
 add_library(tfc::tfc ALIAS tfc)
