--- a/libs/operation_mode/CMakeLists.txt
+++ b/libs/operation_mode/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(liboperation_mode
   src/operation_mode.cpp
 )
 add_library(tfc::operation_mode ALIAS liboperation_mode)
+
 target_include_directories(liboperation_mode
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
@@ -14,12 +15,15 @@ target_include_directories(liboperation_mode
 )
 set_target_properties(liboperation_mode PROPERTIES PREFIX "")
 
+find_package(Boost REQUIRED)
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
 target_link_libraries(liboperation_mode
   PUBLIC
     tfc::base
     tfc::logger
+    tfc::stx
   PRIVATE
+    Boost::boost
     unofficial::sdbusplus
 )
 
