--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,11 @@
 add_executable(testme main.cpp)
 add_subdirectory(connection)
 find_package(Boost REQUIRED)
+find_package(unofficial-sdbusplus CONFIG REQUIRED)
 
 target_link_libraries(testme
   PUBLIC
+    unofficial::sdbusplus
     Boost::boost
     testme_connection
 )
