--- a/test/connection/CMakeLists.txt
+++ b/test/connection/CMakeLists.txt
@@ -1,14 +1,14 @@
 add_library(testme_connection connection.cpp)
 
 find_package(Boost REQUIRED)
-#find_package(unofficial-sdbusplus CONFIG REQUIRED)
-find_package(unofficial-systemd CONFIG REQUIRED)
+find_package(unofficial-sdbusplus CONFIG REQUIRED)
+#find_package(unofficial-systemd CONFIG REQUIRED)
 target_link_libraries(testme_connection
   PRIVATE
     Boost::boost
-#    unofficial::sdbusplus
-    unofficial::systemd::libsystemd
-    systemd # todo why
+    unofficial::sdbusplus
+#    unofficial::systemd::libsystemd
+#    systemd # todo why
 )
 
 target_include_directories(testme_connection
