add compile configure options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,8 @@ set(ColourReset "${Esc}[m")
 set(Red         "${Esc}[31m")
 set(Green       "${Esc}[32m")
 message("${Green}Using ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION} for ${CMAKE_SYSTEM_PROCESSOR}${ColourReset}")
+
+feature_summary(
+  DESCRIPTION "A summary of TFC options"
+  WHAT ALL
+)
