--- a/libs/dbus_utils/tests/CMakeLists.txt
+++ b/libs/dbus_utils/tests/CMakeLists.txt
@@ -1,15 +1,15 @@
 
 find_package(ut CONFIG REQUIRED)
 
-# add_executable(logging_test logging_test.cpp)
-#
-# target_link_libraries(logging_test PRIVATE Boost::ut tfc::logger tfc::base)
-#
-# add_test(
-#   NAME
-#     logging_test
-#   COMMAND
-#     logging_test
-# )
+add_executable(dbus_util_test dbus_util_test.cpp)
+
+target_link_libraries(dbus_util_test PRIVATE Boost::ut tfc::logger tfc::base tfc::dbus_util)
+
+add_test(
+  NAME
+        dbus_util_test
+  COMMAND
+        dbus_util_test
+)
 
 add_subdirectory(examples)
