--- a/libs/operation_mode/CMakeLists.txt
+++ b/libs/operation_mode/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(Boost REQUIRED)
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
 find_package(magic_enum CONFIG REQUIRED)
+find_package(mp CONFIG REQUIRED)
 target_link_libraries(liboperation_mode
   PUBLIC
     tfc::base
@@ -26,6 +27,7 @@ target_link_libraries(liboperation_mode
     tfc::stx
     glaze::glaze
     magic_enum::magic_enum
+    Boost::mp
   PRIVATE
     unofficial::sdbusplus
     Boost::boost
