IPC-conf WIP dbus (#52)
Added a inital implementation for cordinating signals and slots.

--- a/exes/ipc-ruler/CMakeLists.txt
+++ b/exes/ipc-ruler/CMakeLists.txt
@@ -9,6 +9,8 @@ target_link_libraries(ipc-ruler
     tfc::ipc
     tfc::base
     tfc::logger
+    tfc::dbus_util
+    tfc::ipc_connector
     Boost::program_options
     unofficial::sdbusplus
 )
